--- a/assets/css.esdynamo/_main.scss
+++ b/assets/css.esdynamo/_main.scss
@@ -13,7 +13,7 @@ body {
 	font-size: 30px;
 }
 form {
-	margin: 15px auto 30px;
+	margin: 15px auto 0;
 	display: flex;
 	flex-wrap: wrap;
 	margin-right: -15px;
