Fixed add hidden title functionality

--- a/assets/css.esdynamo/_main.scss
+++ b/assets/css.esdynamo/_main.scss
@@ -12,6 +12,9 @@ body {
 	margin-bottom: 30px;
 	font-size: 30px;
 }
+body .logo h1 {
+	margin: 0;
+}
 form {
 	margin: 15px auto 0;
 	display: flex;
