--- a/assets/css.esdynamo/style.scss
+++ b/assets/css.esdynamo/style.scss
@@ -1,5 +1,23 @@
+$brandBlue: #2ba0da;
+$brandDarkGrey: #444;
+$brandLightGrey: #f5f5f5;
+
 @import "_normalize.min.scss";
-@import "_bootstrap-theme.scss";
-@import "_bootstrap.min.scss";
+//@import "_bootstrap-theme.scss";
+//@import "_bootstrap.min.scss";
 @import "_main.scss";
 @import "_structure.scss";
+@import "_hero.scss";
+@import "_typography.scss";
+// FLEXBOX
+@import "_flexboxgrid.min.scss";
+// HAMBURGER
+@import "_hamburgers.scss";
+// NAV
+@import "_nav.scss";
+// HEADER
+@import "_header.scss";
+// FORM
+@import "_form.scss";
+// ACCORDION
+@import "_accordion.scss";
