--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -335,6 +335,10 @@ footer p {
 	box-sizing: border-box;
 }
 
+html.fixed {
+	overflow: hidden;
+}
+
 body {
 	-webkit-font-smoothing: antialiased;
 	color: #333;
@@ -414,6 +418,10 @@ header {
 	padding-left: 30px;
 }
 
+.col {
+	padding-bottom: 1rem;
+}
+
 .boxed {
 	display: flex;
 	flex-direction: column;
@@ -439,8 +447,80 @@ header {
 	background-color: #f5f5f5;
 }
 
-#contact {
-	background-color: #2ba0da;
+#our-nominees .boxed p {
+	display: none;
+}
+
+#our-nominees .boxed {
+	cursor: pointer;
+}
+
+#our-nominees .boxed.no_click {
+	cursor: default;
+}
+
+.modal {
+	position: fixed;
+	z-index: 9999999;
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	display: none;
+	background-color: rgba(0, 0, 0, 0.85);
+	cursor: pointer;
+}
+
+.modal_container {
+	position: fixed;
+	z-index: 999999;
+	top: 50%;
+	display: none;
+	left: 50%;
+	width: 100%;
+	padding: 2em;
+	transform: translate(-50%, -50%);
+}
+
+.boxed.no_click {
+	pointer-events: none;
+}
+
+.modal_inner.visible {
+	transition: .25s ease-in-out;
+	transform: translate(0, 0);
+}
+
+.modal_inner {
+	max-width: 800px;
+	position: relative;
+	padding: 3em;
+	background-color: #fff;
+	transition: .25s ease-in-out;
+	transform: translate(0, -30px);
+	overflow: auto;
+}
+
+.modal_inner .closeModalButton {
+	top: .75em;
+	right: .75em;
+}
+
+.modal_inner .closeModalButton span {
+	background-color: #000;
+}
+
+@media (max-width: 850px) {
+	.modal_container {
+		top: 0;
+		transform: translate(-50%, 0);
+		overflow: auto;
+		height: 100%;
+	}
+	
+	.modal_inner {
+		padding: 2em;
+	}
 }
 
 .hero {
@@ -455,6 +535,11 @@ header {
 	.hero {
 		margin-top: 85px;
 	}
+}
+
+.social_and_toggle {
+	display: flex;
+	align-items: center;
 }
 
 .light h1, .light h2, .light h3, .light h4, .light h5, .light h6, .light p, .light ol, .light ul, .light strong, .light .wpcf7 input, .light .wpcf7-submit {
@@ -519,6 +604,55 @@ a {
 
 p:last-of-type {
 	margin-bottom: 0;
+}
+
+.social_media {
+	padding: 0;
+	display: flex;
+	margin: 0 25px 0 0;
+}
+
+.social_media li {
+	text-indent: 0;
+	margin-right: 20px;
+	margin-bottom: 0;
+}
+
+.social_media li:last-of-type {
+	margin-right: 0;
+}
+
+.social_media li::before {
+	display: none;
+}
+
+.social_media a {
+	color: #fff;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #000;
+	width: 25px;
+	height: 25px;
+	font-size: 15px;
+}
+
+.footer_logo {
+	max-width: 200px;
+}
+
+.menuInner .social_media a {
+	background-color: #fff;
+}
+
+.menuInner .social_media a i {
+	color: #000;
+}
+
+@media (max-width: 480px) {
+	header .social_media {
+		display: none;
+	}
 }
 
 .container, .container-fluid {
@@ -1860,6 +1994,7 @@ header .inner_container {
 header.down {
 	transition: .25s ease-in-out;
 	transform: translate(0, -100%);
+	position: fixed;
 }
 
 header.up {
