--- a/assets/css.esdynamo/_hero.scss
+++ b/assets/css.esdynamo/_hero.scss
@@ -3,11 +3,11 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
-	margin-top: 92.77px;
+	//margin-top: 92.77px;
 }
 @media (max-width: 980px) {
 	.hero {
-		margin-top: 85px;
+		//margin-top: 85px;
 	}
 }
 .social_and_toggle {
