--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -473,12 +473,10 @@ header {
 
 .modal_container {
 	position: fixed;
-	z-index: 999999;
+	z-index: 9999999;
 	top: 50%;
 	display: none;
 	left: 50%;
-	width: 100%;
-	padding: 2em;
 	transform: translate(-50%, -50%);
 }
 
@@ -516,6 +514,8 @@ header {
 		transform: translate(-50%, 0);
 		overflow: auto;
 		height: 100%;
+		width: 100%;
+		padding: 2em;
 	}
 	
 	.modal_inner {
@@ -528,13 +528,6 @@ header {
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
-	margin-top: 92.77px;
-}
-
-@media (max-width: 980px) {
-	.hero {
-		margin-top: 85px;
-	}
 }
 
 .social_and_toggle {
@@ -638,7 +631,7 @@ p:last-of-type {
 }
 
 .footer_logo {
-	max-width: 200px;
+	max-width: 160px;
 }
 
 .menuInner .social_media a {
@@ -1979,6 +1972,22 @@ header {
 	position: absolute;
 	top: 0;
 	left: 0;
+	background-color: transparent;
+}
+
+.logo .st0 {
+	transition: .25s ease-in-out;
+	fill: #fff;
+}
+
+.white-bg .logo .st0 {
+	transition: .25s ease-in-out;
+	fill: #2ba0da;
+}
+
+.white-bg {
+	transition: .25s ease-in-out;
+	background-color: #fff;
 }
 
 header .inner_container {
