--- a/assets/css.esdynamo/_typography.scss
+++ b/assets/css.esdynamo/_typography.scss
@@ -101,6 +101,11 @@ p:last-of-type {
 .menuInner .social_media a i {
 	color: #000;
 }
+@media (max-width: 48em) {
+	.bottomMarginMobile {
+		margin-bottom: 30px;
+	}
+}
 @media (max-width: 480px) {
 	header .social_media {
 		display: none;
