--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -630,6 +630,17 @@ p:last-of-type {
 	font-size: 15px;
 }
 
+h3 a {
+	font-size: 20px;
+	color: #333;
+	transition: .25s ease-in-out;
+}
+
+h3 a:hover {
+	color: #2ba0da;
+	transition: .25s ease-in-out;
+}
+
 .footer_logo {
 	max-width: 160px;
 }
