--- a/assets/css.esdynamo/_typography.scss
+++ b/assets/css.esdynamo/_typography.scss
@@ -61,6 +61,14 @@ a {
 	color: $brandBlue;
 	text-decoration: none;
 }
+a .boxed h3 {
+	color: #333;
+	transition: .25s ease-in-out;
+}
+a .boxed:hover h3 {
+	color: $brandBlue;
+	transition: .25s ease-in-out;
+}
 p:last-of-type {
 	margin-bottom: 0;
 }
