--- a/assets/css.esdynamo/_nav.scss
+++ b/assets/css.esdynamo/_nav.scss
@@ -316,7 +316,7 @@ span.at-icon-wrapper  {
 	background-color: #fff;
 	opacity: .75;
 	position: fixed;
-	z-index: 9999;
+	z-index: 9999999;
 	cursor: pointer;
 }
 
