--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1994,7 +1994,7 @@ span.at-icon-wrapper {
 	background-color: #fff;
 	opacity: .75;
 	position: fixed;
-	z-index: 9999;
+	z-index: 9999999;
 	cursor: pointer;
 }
 
