--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -349,6 +349,10 @@ section {
 	position: relative;
 }
 
+body .container {
+	width: 100%;
+}
+
 .section {
 	padding-top: 6em;
 	padding-bottom: 6em;
