max width on img

--- a/assets/css.esdynamo/_graph.scss
+++ b/assets/css.esdynamo/_graph.scss
@@ -3,6 +3,11 @@
 	animation-fill-mode: forwards;
 }
 
+img {
+	max-width: 100%;
+	height: auto;
+}
+
 @keyframes move {
     100% {
         stroke-dashoffset: 0;
