--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -343,6 +343,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	color: #333;
 	line-height: 1.5em;
+	font-family: 'Almarai', sans-serif;
 }
 
 section {
