--- a/assets/css.esdynamo/_structure.scss
+++ b/assets/css.esdynamo/_structure.scss
@@ -11,7 +11,9 @@ body {
 	-webkit-font-smoothing: antialiased;
 	color: #333;
 	line-height: 1.5em;
-	font-family: 'Almarai', sans-serif;
+	font-family: neue-haas-grotesk-text, sans-serif;
+	font-weight: 400;
+	font-style: normal;
 }
 
 section {
