--- a/assets/css.esdynamo/_typography.scss
+++ b/assets/css.esdynamo/_typography.scss
@@ -27,15 +27,17 @@
 
 h2 {
 	font-size: 28px;
+	letter-spacing: 0.02em;
 }
 
 h3 {
 	font-size: 20px;
+	font-weight: normal;
 }
 
 h1,h2,h3,h4,h5,h6 {
 	margin: 0 0 1em;
-	line-height: 1.25em;
+	line-height: 1.5em;
 }
 ul {
 	padding: 0 0 0 20px;
