--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -604,15 +604,17 @@ header {
 
 h2 {
 	font-size: 28px;
+	letter-spacing: 0.02em;
 }
 
 h3 {
 	font-size: 20px;
+	font-weight: normal;
 }
 
 h1, h2, h3, h4, h5, h6 {
 	margin: 0 0 1em;
-	line-height: 1.25em;
+	line-height: 1.5em;
 }
 
 ul {
