--- a/assets/css.esdynamo/_typography.scss
+++ b/assets/css.esdynamo/_typography.scss
@@ -28,6 +28,7 @@
 h2 {
 	font-size: 28px;
 	//letter-spacing: 0.02em;
+	font-weight: 600;
 }
 
 h3 {
@@ -142,11 +143,8 @@ h3 a:hover {
 		margin-top: 0;
 	}
 }
-@media (max-width: 480px) {
-	header .social_media {
-		display: none;
-	}
-	.col ~ .col ul {
-		margin-top: 0;
+@media (max-device-width: 1366px) {
+	h2 {
+		letter-spacing: -.02em;
 	}
 }
