--- a/assets/css.esdynamo/_typography.scss
+++ b/assets/css.esdynamo/_typography.scss
@@ -143,6 +143,11 @@ h3 a:hover {
 		margin-top: 0;
 	}
 }
+@media (max-width: 480px) {
+	.col ~ .col ul {
+		margin-top: 0;
+	}
+}
 @media (max-device-width: 1366px) {
 	h2 {
 		letter-spacing: -.05em;
