--- a/assets/css.esdynamo/style.scss
+++ b/assets/css.esdynamo/style.scss
@@ -21,5 +21,7 @@ $brandLightGrey: #f5f5f5;
 @import "_form.scss";
 // ACCORDION
 @import "_accordion.scss";
+// HEAD SHOTS
+@import "_headshots.scss";
 // GRAPH
 @import "_graph.scss";
