--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2175,12 +2175,14 @@ header.up {
 }
 
 .headshot_container img {
+	width: 100%;
 	height: 100%;
 	object-fit: cover;
 }
 
 .headshot_container ~ .boxed {
 	border-left: none;
+	flex: au	to;
 }
 
 #graph {
