--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2170,6 +2170,11 @@ header.up {
 	transition: 0.5s ease-in-out;
 }
 
+.display-flex {
+	display: flex;
+	flex-wrap: wrap;
+}
+
 .headshot_container {
 	flex: 0 0 33%;
 }
