--- a/assets/css.esdynamo/_headshots.scss
+++ b/assets/css.esdynamo/_headshots.scss
@@ -11,6 +11,9 @@
 	object-fit: cover;
 }
 .headshot_container ~ .boxed {
-	border-left: none;
+	border: none;
 	flex: 0 0 65%;
+}
+.profile {
+	border: 2px solid #e9e9e9;
 }
