--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -551,7 +551,7 @@ header {
 		padding-bottom: 0;
 	}
 	
-	#press .col:nth-child(2n+1):nth-last-child(-n+2), #press .col:nth-child(2n+1):nth-last-child(-n+2) ~ .col {
+	#press .col:nth-child(2n+1):nth-last-child(-n+2) {
 		padding-bottom: 1rem;
 	}
 }
